# ks-shadowing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hatch_build.py  pyproject.toml  ty.toml
csrc/: CMakeLists.txt  ksint.hpp
csrc/hera/: CMakeLists.txt  hera2py.cpp
csrc/ksint/: ksint.cpp  ksint2py.cpp
csrc/unionfind/: CMakeLists.txt  unionfind2py.cpp
data/: ks22h02t100ED.mat  rpos_all.npz  rpos_selected.npz
docs/: conf.py  index.rst
ks_shadowing/: __init__.py  detection.py  integrator.py  rpo.py  ssa.py  transforms.py
ks_shadowing/cli/: __init__.py  detect.py  histogram.py  match.py  plotting.py  results.py  visualize.py
ks_shadowing/core/: __init__.py  constants.py  detection.py  event.py  integrator.py  matching.py  parallel.py  rpo.py  trajectory.py  transforms.py  unionfind.py  util.py
ks_shadowing/pha/: __init__.py  detector.py  pathfinding.py  persistence.py  shifts.py  wasserstein.py
ks_shadowing/ssa/: __init__.py  detector.py  pathfinding.py  rpo.py
tests/: conftest.py  test_detection.py  test_integrator.py  test_rpo.py  test_ssa.py  test_transforms.py
tests/cli/: test_match.py  test_results.py
tests/core/: test_integrator.py  test_matching.py  test_rpo.py  test_trajectory.py  test_transforms.py  test_unionfind.py  test_util.py
tests/pha/: __init__.py  test_detector.py  test_pathfinding.py  test_persistence.py  test_shifts.py  test_wasserstein.py
tests/ssa/: test_detector.py  test_pathfinding.py
