[project]
name = "ks-shadowing"
version = "0.1.0"
description = "Shadowing detection for Kuramoto-Sivashinsky equation"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gudhi>=3.11.0",
    "numpy>=2.4.1",
    "scipy>=1.17.0",
    "tqdm>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ks_shadowing"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["csrc/hera/upstream"]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "UP", "SIM", "PTH", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Magic values in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "sphinx>=9.1.0",
    "ty>=0.0.11",
]
